--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p{
     margin: auto;
 }
 .bt{
+    width: 150px;
     border: 2px solid #e5097f ;
     padding: 10px;
     text-decoration: none;
@@ -108,7 +109,7 @@ p{
     background-color: #ffa8d9;
     font-weight: bold;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 0 auto;
 
 }
 .link{
