di radio a boton de header

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1:hover{
     background-color: #ff6961;
     text-decoration: none;
     color: blanchedalmond;
+    border-radius: 10px;
     padding: 10px 0;
     text-align: center;
     margin: 0 auto;
