--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ p{
     background-color: slateblue;
     text-decoration: none;
     color: aliceblue;
+    border-radius: 10px;
     padding: 10px 0;
     text-align: center;
     margin: 0 auto;
