--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul li a {
     display: inline-block;
     font-family:Georgia, 'Times New Roman', Times, serif; 
     font-size: 20px;
-    color: #ff0534;
+    color: #8f7193;
     text-decoration: none;
     
 }
@@ -119,7 +119,7 @@ p{
 .sec2{
     width:100%;
     height: 25vh;
-    background-color: #dc143c;
+    background-color:#ffbfb0;
   
     background-size: cover;
     background-position: center;
@@ -156,8 +156,8 @@ p{
 .sec6{
     width:100%;
     height: 25vh;
-    background-color:#01c4e7;
-  
+    background-color:#f79fbe;
+    
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -165,7 +165,7 @@ p{
 .sec4{
     width:100%;
     height: 100vh;
-    background-color: #4afde7;
+    background-color: #b0f6f2;
     background-image: url(https://img.freepik.com/foto-gratis/confeti-estrella-brillante-sobre-fondo-acuarela-pastel-abstracto-colorido_53876-98173.jpg?w=826&t=st=1670892504~exp=1670893104~hmac=36ad50262e92595aab021fa23f227355f83eb3082d21a65bac4eedee2683ce34);
     background-size: cover;
     background-position: center;
@@ -184,7 +184,7 @@ p{
 .sec7{
     width:100%;
     height: 25vh;
-    background-color:#c501e2;
+    background-color:#d0bdf6;
   
     background-size: cover;
     background-position: center;
@@ -193,7 +193,7 @@ p{
 .sec5{
     width:100%;
     height: 100vh;
-    background-color: #4afde7;
+    background-color: #b7fadf;
     background-image: url();
     background-size: cover;
     background-position: center;
