--- a/style.css
+++ b/style.css
@@ -193,8 +193,8 @@ p{
 .sec5{
     width:100%;
     height: 50vh;
+    padding-top: 40px;
     background-color: #b7fadf;
-    background-image: url();
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -202,10 +202,9 @@ p{
 
 
 .card{
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     margin: 0 auto;
-    padding: 50px 50px;
     border: 5px solid black;
 }
 .libro{
