--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ p{
     width:100%;
     height: 50vh;
     padding-top: 40px;
-    background-color: #b7fadf;
+    background-color: #ffffec;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -205,7 +205,8 @@ p{
     width: 300px;
     height: 300px;
     margin: 0 auto;
-    border: 5px solid black;
+    border: 5px solid #b2dafa;
+    padding-top: 15px;
 }
 .libro{
     display: block;
@@ -214,15 +215,15 @@ p{
     margin: 0 auto;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .btn1 {
     display: block;
     width: 150px;
-    background-color: slateblue;
+    background-color: #fdcae1;
     text-decoration: none;
-    color: aliceblue;
+    color: rgb(15, 15, 15);
     border-radius: 10px;
     padding: 10px 0;
     text-align: center;
