--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1{
     font-family: 'Gasterye Bold', sans-serif;
     font-size: 350px;
     color: #6664ff;
-    text-align: center;
+    text-align: justify;
 }
 h1:hover{
     color: #ff6961;
