--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header{
     background-size: cover;
 
 }
+
 h1{
     font-family: 'Gasterye Bold', sans-serif;
     font-size: 350px;
@@ -233,6 +234,32 @@ p{
     padding: 10px 0;
     text-align: center;
     margin: 0 auto;
+}
+.galeria_container{
+    background-color: #ffffec;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    padding: 64px 0;
+    margin: 0 auto;
+}
+.gale_text{
+    color: #f45572;
+    font-size: 2rem;
+    margin-bottom: 2em;
+
+}
+.galeria_fotos{
+    padding-top:  75px;
+   
+}
+
+.imagen{
+    width: 100%;
+    height: 100%;
+    max-width: 200px;
+    flex: 350px;
+    
 }
 .face{
     width: 40px;
