--- a/style.css
+++ b/style.css
@@ -177,6 +177,8 @@ h3{
     width: 900;
     height: 600px;
     margin: 100px 200px;
+
+
 }
 .tex{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -222,63 +224,67 @@ p{
     background-repeat: no-repeat;
 }
 .sec7{
-    width:100%;
-    height: 50vh;
-    padding-top: 40px;
-    background-color: #86effd;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+     display: flex;
+     width: 100%;
+     margin: 0 auto;
+     min-height: 100vh;
+     justify-content: space-between;
+     padding: 80px 0;
+     background-color: #ffeff6;
 }
-
-
+.tarjeta {
+    background-color: #cff5d6;
+    width: 25%;
+    min-height: 600px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-shadow: 0 0 32px -16px rgb(10, 10, 10);
+    border-radius: 25px;
+}
 .card{
-    width: 300px;
-    height: 300px;
-    margin: 0 auto;
-    border: 5px solid #b2dafa;
-    padding-top: 15px;
+    height: 50%;
 }
-.libro{
+.card_img {
+    width: 100%;
+    height: 100%;
     display: block;
-    width: 200px;
-    height: 200px;
     margin: 0 auto;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 15px;
 }
-
-.btn1 {
-    display: block;
-    width: 150px;
-    background-color: #fdcae1;
-    text-decoration: none;
-    color: rgb(15, 15, 15);
-    border-radius: 10px;
-    padding: 10px 0;
+.card_titulo{
     text-align: center;
-    margin: 0 auto;
+    margin: 15px;
+}
+.btn1 {
+    display: inline-block;
+    background-color: #fdcae1;
+    padding: 15px 30px;
+    margin-top: 1em;
+    text-decoration: none;
+    margin-top: 20px;
+    border-radius: 5%;
 }
 .galeria{
     width: 100%;
     overflow: hidden;
     margin:0 auto;
     background-color: #ffffec;
-    background-size: contain;
 }
 .galeria_container{
-   
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
+    
      
 
 }
 .gale_text {
-    color: hsl(350, 82%, 57%);
+    color: #bc98f3;
     font-size: 2rem;
     margin-bottom: 1em;
-
+    padding: 30px 0;
+  
 }
 .galeria_fotos{
     min-width: 200px;
@@ -287,12 +293,13 @@ p{
     padding-top: 25px;
     padding-left: 400px;
    
+   
 }
 
 .imagen{
     
-   width: 100%;
-   height: 100%;
+   width: 75%;
+   height: 75%;
    object-fit: cover;
     
 }
