--- a/style.css
+++ b/style.css
@@ -70,9 +70,9 @@ h1:hover{
 .btn{
     width: 150px;
     display: block;
-    background-color: #ff6961;
+    background-color:#00b0ff;
     text-decoration: none;
-    color: blanchedalmond;
+    color:#9bfae0;
     border-radius: 10px;
     padding: 10px 0;
     text-align: center;
@@ -80,9 +80,10 @@ h1:hover{
     
 }
 .btn:hover{
-    background-color:#00b0ff;
-    color:#9bfae0;
     
+    background-color: #ff6961;
+    color: blanchedalmond;
+   
    }
 
 .sec1 {
@@ -151,7 +152,6 @@ h3{
     width:100%;
     height: 25vh;
     background-color:#ffbfb0;
-  
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -228,7 +228,7 @@ p{
      width: 100%;
      margin: 0 auto;
      min-height: 100vh;
-     justify-content: space-between;
+     justify-content: space-evenly;
      padding: 80px 0;
      background-color: #ffeff6;
 }
@@ -246,7 +246,7 @@ p{
 .card{
     height: 50%;
 }
-.card_img {
+.card_img  {
     width: 100%;
     height: 100%;
     display: block;
@@ -276,8 +276,6 @@ p{
     flex-wrap: wrap;
     gap: 20px;
     
-     
-
 }
 .gale_text {
     color: #bc98f3;
