--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ p{
 .sec7{
      display: flex;
      width: 100%;
+     height: 50vh;
      margin: 0 auto;
      min-height: 100vh;
      justify-content: space-evenly;
@@ -234,8 +235,8 @@ p{
 }
 .tarjeta {
     background-color: #cff5d6;
-    width: 25%;
-    min-height: 600px;
+    width: 21%;
+    min-height: 450px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
