--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h1:hover{
 }
 
 .izquierda{
-    background:#94e7ff;
+    background: #fffff1;
     height: 100vh;
     width: 50%;
 }
@@ -104,11 +104,11 @@ h1:hover{
 
 }  
 .letra1 {
-    color: #e5097f;
+    color: #ff97d9;
 }
 
 h2{
-    color: #014ba0;
+    color: #2196f3;
     font-size: 75px;
     width: 50%;
     margin: auto;
@@ -117,9 +117,9 @@ h2{
 }
 h3{
     margin: center;
-    margin-left: 270px;
-    color: #014ba0;
-    font-size:25px;
+    margin-left: 250px;
+    color: #2196f3;
+    font-size:30px;
     
    
 }
@@ -134,15 +134,15 @@ h3{
 }
 .bt{
     width: 150px;
-    border: 2px solid #e75fa8c7 ;
+    border: 2px solid #2196f3;
     padding: 10px;
     text-decoration: none;
     color: #6664ff;
     border-radius: 10px;
-    background-color: #ffa8d9;
+    background-color: #fcc0e6;
     font-weight: bold;
     display: inline-block;
-    margin-top: 40px;
+    margin-top: 5px;
 
 }
 .link{
@@ -165,6 +165,7 @@ h3{
     text-align: justify;
 }
 .sec3{
+    display: flex;
     width:100%;
     height: 100vh;
     background-color: #4afde7;
@@ -174,10 +175,11 @@ h3{
     background-repeat: no-repeat;
 }
 .bosito{
-    width: 900;
-    height: 600px;
-    margin: 100px 200px;
-
+    width: 850px;
+    height: 550px;
+    margin: 100px 50px;
+    justify-content: center;
+   
 
 }
 .tex{
