--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ header{
     background: url(https://images.unsplash.com/photo-1555252333-9f8e92e65df9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
     background-repeat: no-repeat;
     background-size: cover;
-   
 
 }
 .cbz{
@@ -323,7 +322,32 @@ footer{
     height:350px;
     background: url(https://fondosmil.com/fondo/1938.jpg);
     text-align: center;
+    
 }
 
 
+@media screen and (max-width: 800px){
 
+    header{
+        width: 100%;
+        height: 100vh;
+        background: url(https://images.unsplash.com/photo-1555252333-9f8e92e65df9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 800px;
+        float: left; width: 800px; height: 550px; margin-right: 1em; 
+    
+    }
+
+    h1{
+        font-family: 'Gasterye Bold', sans-serif;
+        font-size: 175px;
+        color: #00b0ff;
+        text-align: center;
+        text-shadow: rgb(10, 10, 10) 2px 2px 3px;
+    }
+    h1:hover{
+        color: #ff6961;
+    
+    
+}
