--- a/style.css
+++ b/style.css
@@ -438,6 +438,72 @@ h1:hover{
     color: blanchedalmond;
    
 }
+.sec1 {
+    display: flexbox;
+     width: 800px;
+     height: 50vh;
+     max-width: 800px;
+     float: left; 
+     width: 800px; 
+     height: 550px;
+ }
+ .derecha{
+     background: url(https://images.unsplash.com/photo-1582486225644-aeacf6aa0b1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80);
+     background-size: cover;
+     background-position: center;
+     max-width: 800px;
+     float: left; 
+     width: 400px; 
+     height: 550px;
+ 
+ }  
+ .letra1 {
+     color: #ff97d9;
+     font-size: 65px ;
+     padding-left: 20px;
+ }
+ 
+ h2{
+     color: #2196f3;
+     font-size: 65px;
+     width: 100%;
+     margin: auto;
+     padding-top: 50px;
+     margin-bottom: 40px;
+ }
+ h3{
+     margin: center;
+     margin-left: 100px;
+     color: #2196f3;
+     font-size: 22px;
+     
+    
+ }
+ .text{
+     font-size: 14px;
+     line-height: 20px;
+     width: 100%;
+     margin: 0 auto;
+     text-align: justify;
+     padding: 25px;
+     
+ }
+ .bt{
+     width: 150px;
+     border: 2px solid #2196f3;
+     padding: 10px;
+     text-decoration: none;
+     color: #6664ff;
+     border-radius: 10px;
+     background-color: #fcc0e6;
+     font-weight: bold;
+     display: inline-block;
+     margin-top: 5px;
+ 
+ }
+ .link{
+     text-align: center;
+ }
 
 .sec2{
     width:100%;
