--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/gasterye');
 
-
-
-
-
 *{
     margin: 0;
     padding: 0;
@@ -20,7 +16,7 @@ header{
 }
 .cbz{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     height: 90px;
     padding: 5px 10%;
@@ -152,6 +148,7 @@ h3{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 
 .te1 {
@@ -170,28 +167,20 @@ h3{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 .bosito{
     width: 600px;
     height: 450px;
-    margin: 100px 450px;
-    justify-content: center;  
-
+    margin: auto;
 }
-.te2{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 19px;
-    color: #f8f5f6;
-    padding: 75px;
-    text-align: justify;
 
-}
 
 .sec4{
     width:100%;
     height: 25vh;
-    background-color:#f79fbe;
     
+    background-color:#f79fbe;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -204,6 +193,7 @@ h3{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
 }
 p{
     text-align: center;
@@ -212,7 +202,7 @@ p{
 .bbjugu{
     width:650px;
     height: 450px;
-    margin: 75px 400px;
+    margin: auto;
 
 }
 .sec6{
@@ -295,10 +285,20 @@ p{
    
    
 }
+.imagen{
+    
+    width: 75%;
+    height: 75%;
+    object-fit: cover;
+     
+ }
 footer {
     width: 100%;
     height:50vh;
     background: url(https://fondosmil.com/fondo/1938.jpg);
+    background-size: cover;
+    
+    background-repeat: no-repeat;
     display: flex;
    
     
@@ -306,55 +306,112 @@ footer {
 
 .redes {
     
-    background: url(https://fondosmil.com/fondo/1938.jpg);
+
     display: flex;
-    justify-content: flex-end;
-    align-content: space-between;
+    
+    
     
 }
-.imagen{
-    
-   width: 75%;
-   height: 75%;
-   object-fit: cover;
-    
-}
+
 .face{
-    margin-top: 320px;
-    margin-left: 75px;
-    padding: 10px;
+    
     width: 50px;
     height: 50px;
-
+    margin: 30px 30px;
+    margin-top: 300px;
+    
+   
 }
 .insta{
-    margin-top: 320px;
-    margin-left:85px;
-    padding: 10px;
     width: 50px;
     height: 50px;
+    margin: 30px 30px;
+    margin-top: 300px;
+  
 
 }
 .twiter{
-    margin-top: 320px ;
-    margin-left: 75px;
-    padding: 10px;
     width: 50px;
     height: 50px;
+    margin: 30px 30px;
+    margin-top: 300px;
+    
 }
 .mapa{
     margin-top: 100px;
     margin-left: 200px;
-    padding: 50px 50px;
+   
+    
 }
 .fin{
-    margin-top: 360px ;
-    margin-left: 250px;
+    display: flex;
     text-align: justify;
-    justify-content: flex-end;
+   
+    align-items: flex-end;
+    padding-bottom: 20px;
+    margin-left: 65px;
 }
 
+@media screen (max-width:1200){
 
+ footer {
+    width: 100%;
+    height:50vh;
+    background: url(https://fondosmil.com/fondo/1938.jpg);
+    background-size: cover;
+    
+    background-repeat: no-repeat;
+    display: flex;
+   
+    
+}
+
+.redes {
+    
+    display: flex;  
+    
+}
+
+.face{
+    
+    width: 50px;
+    height: 50px;
+    margin: 30px 30px;
+    margin-top: 300px;
+    
+   
+}
+.insta{
+    width: 50px;
+    height: 50px;
+    margin: 30px 30px;
+    margin-top: 300px;
+  
+
+}
+.twiter{
+    width: 50px;
+    height: 50px;
+    margin: 30px 30px;
+    margin-top: 300px;
+    
+}
+.mapa{
+    margin-top: 100px;
+    margin-left: 50px;
+   
+    
+}
+.fin{
+    display: flex;
+    text-align: justify;
+   
+    align-items: flex-end;
+    padding-bottom: 20px;
+    margin-left: 5px;
+}   
+    
+}
 
 @media screen and (max-width: 800px){
 
@@ -373,13 +430,12 @@ footer {
     }
 
 .cbz{
-    display: flex;
+    display: flexbox;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    height: 90px;
+    height: 175px;
     padding: 5px 10%;
     background-color: #ffe1ee;
+    
 }
 .cbz.logo{
     height: 60px;
@@ -390,20 +446,30 @@ footer {
     width: 55px;
     height: 55px;
     border-radius: 50%;
+    margin-right: 35px;
     
+}
+.menu {
+    position: relative;
 }
 nav ul li {
     display: inline-block;
     list-style: none;
     padding: 0px 10px;
+    display: flex;
+    flex-direction: column;
+
 }
 
 nav ul li a {
     display: inline-block;
     font-family:Georgia, 'Times New Roman', Times, serif; 
-    font-size: 18px;
+    font-size: 17px;
     color: #646064;
     text-decoration: none;
+    align-items: center;
+    
+    
    
 }
 h1{
@@ -464,12 +530,13 @@ h1:hover{
  }
  
  h2{
-     color: #2196f3;
+    
      font-size: 65px;
      width: 100%;
      margin: auto;
      padding-top: 50px;
      margin-bottom: 40px;
+     color: #2196f3;
  }
  h3{
      margin: center;
@@ -540,16 +607,17 @@ h1:hover{
     float: left; 
     width: 800px; 
     height: 350px;
-    margin-right: 1em; 
+    margin-right: 1em;
+    
 }
 .bosito{
     width: 400px;
     height: 250px;
-    margin: 25px 200px;
-    justify-content: center;
+    margin: auto;
+}
    
 
-}
+
 
 .sec4{
     width:100%;
@@ -629,14 +697,14 @@ p{
     color: #bc98f3;
     font-size: 2rem;
     margin-bottom: 1em;
-    padding: 30px 0;
+    padding: 20px 0;
   
 }
 .galeria_fotos{
     min-width: 200px;
     max-width: 1200px;
     flex: 350px;
-    padding-top: 25px;
+    padding-top: 20px;
     padding-left: 120px;
     float: left; 
     width: 800px; 
@@ -661,41 +729,43 @@ p{
     margin: 0 auto;
     min-height: 50vh;
     justify-content: space-evenly;
-    padding: 25px 0;
+    
     background-color: #ffeff6;
 }
 .tarjeta {
    background-color: #cff5d6;
-   width: 20%;
+   width: 18%;
    height: 4%;
    overflow: hidden;
    display: flex;
-   flex-direction: column;
-   align-items: flex-start;
    box-shadow: 0 0 32px -16px rgb(10, 10, 10);
    border-radius: 25px;
    min-height: 200px;
+   
+ 
+   
 }
 .card{
    height: 25%;
 }
 .card_img  {
-   width: 100px;
-   height: 75px;
+    object-fit: contain;
+   width: 100%;
+   height: 100px;
    display: flex;
    margin: 1px;
 }
 .card_titulo{
-    margin-top: 15px;
+    margin-top: 55px; 
    text-align: center;
    font-size: 11px;
-   margin: 35px;
+   
 }
 .btn1 {
    display: inline-block;
    background-color: #fdcae1;
    padding: 5px 3px;
-   margin-top: 5px;
+   
    text-decoration: none;
    border-radius: 5%;
    font-size: 11px;
@@ -704,8 +774,10 @@ footer {
     width: 100%;
     height: 50vh;
     background: url(https://fondosmil.com/fondo/1938.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     max-width: 800px;
-   
     display: flex;
     float: left; 
     width: 800px; 
@@ -717,20 +789,25 @@ footer {
 .redes{
     display: flexbox;
     flex-direction: column;
+    
+    
 }
 
 .face{
-    margin-top: 25px;
-    margin-left: 30px;
+    margin-top: 210px;
+    margin-left: 8px;
     margin-bottom: 20px;
-    padding: 5px;
+
+    padding: 3px;
     width: 35px;
     height: 35px;
+    
+    
 
 }
 .insta{
-    margin-top: 25px;
-    margin-left: 25px;
+    margin-top: 15px;
+    margin-left: 8px;
     margin-bottom: 10px;
     padding: 5px;
     width: 35px;
@@ -738,22 +815,110 @@ footer {
 
 }
 .twiter{
-    margin-top: 25px ;
-    margin-left: 25px;
+    margin-top: 15px ;
+    margin-left: 8px;
     margin-bottom: 10px;
     padding: 5px;
     width: 35px;
     height: 35px;
 }
 .mapa{
-    margin-top: 150px;
+    margin-top: 145px;
     margin-left: 50px;
     padding: 25px 25px;
+   
 }
 .fin{
    display: flexbox;
    justify-content: flex-start;
-   padding-top: 15px;
-   margin-left: -5px;
+   padding-top: 20px;
+   padding-bottom: 5px;
+   padding-right: 5px;
+   margin-left: -25px;
   
+}
+}
+
+@media screen and (max-width: 600px){
+    header{
+        width: 100%;
+        height: 100vh;
+        background: url(https://images.unsplash.com/photo-1555252333-9f8e92e65df9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 600px;
+        float: left; 
+        width: 600px; 
+        height: 350px;
+        margin-right: 1em; 
+    
+    }
+    .cbz{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        height: 150px;
+        padding: 5px 10%;
+        background-color: #ffe1ee;
+    }
+    .cbz.logo{
+        height: 60px;
+        width: auto;
+           
+    }
+    .logme {
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        
+    }
+    nav ul li {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        padding: 0px 10px;
+    }
+    
+    nav ul li a {
+        display: flex;
+        flex-direction: column;
+        font-family:Georgia, 'Times New Roman', Times, serif; 
+        font-size: 20px;
+        color: #646064;
+        text-decoration: none;
+      
+    }
+    
+    h1{
+        font-family: 'Gasterye Bold', sans-serif;
+        font-size: 350px;
+        color: #00b0ff;
+        text-align: center;
+        text-shadow: rgb(10, 10, 10) 2px 2px 3px;
+    }
+    h1:hover{
+        color: #ff6961;
+    
+    }
+    .btn{
+        width: 150px;
+        display: block;
+        background-color:#00b0ff;
+        text-decoration: none;
+        color:#9bfae0;
+        border-radius: 10px;
+        padding: 10px 0;
+        text-align: center;
+        margin: 0 auto;
+        
+    }
+    .btn:hover{
+        
+        background-color: #ff6961;
+        color: blanchedalmond;
+       
+       }
+
+
 }
